--- a/hi/.q/index.html
+++ b/hi/.q/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="ws-gateway" content="{{websocket_address}}">
-    <title>{{app_name}}</title>
+    <meta name="ws-gateway" content="ws://127.0.0.1:1337">
+    <title>Hi</title>
   </head>
   <body>
     <style>
